Created Contact view, Home view in progress, Added Resources folder, Modified _Layout

--- a/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
+++ b/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
@@ -187,6 +187,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\img1.jpeg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
