--- a/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
+++ b/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
@@ -188,6 +188,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\img1.jpeg" />
+    <Content Include="Resources\vid.gif" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
