--- a/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
+++ b/GetHired/GetHired.DataModels/GetHired.DataModels.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\201803281556183_PostalCodeFixedLength.Designer.cs">
       <DependentUpon>201803281556183_PostalCodeFixedLength.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803300809590_AddressIndexChanged.cs" />
+    <Compile Include="Migrations\201803300809590_AddressIndexChanged.Designer.cs">
+      <DependentUpon>201803300809590_AddressIndexChanged.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\GetHiredContext.cs" />
     <Compile Include="Migrations\201803220705154_InterfaceIModificationHistoryImplemented.cs" />
     <Compile Include="Migrations\201803220705154_InterfaceIModificationHistoryImplemented.Designer.cs">
@@ -143,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803281556183_PostalCodeFixedLength.resx">
       <DependentUpon>201803281556183_PostalCodeFixedLength.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803300809590_AddressIndexChanged.resx">
+      <DependentUpon>201803300809590_AddressIndexChanged.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
