--- a/GetHired/GetHired.ASPClient/Web.config
+++ b/GetHired/GetHired.ASPClient/Web.config
@@ -72,7 +72,7 @@
   </system.codedom>
   
   <connectionStrings>
-    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS01;Initial Catalog=GetHired;Integrated Security=True;" />
+    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GetHired;Integrated Security=True;" />
   </connectionStrings>
   
   <!--<connectionStrings>
