--- a/GetHired/GetHired.ASPClient/Web.config
+++ b/GetHired/GetHired.ASPClient/Web.config
@@ -75,9 +75,9 @@
     <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GetHired;Integrated Security=True;" />
   </connectionStrings>
   
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\sqlserver;Database=GetHired;Integrated Security=True;" />
-  </connectionStrings>
+  </connectionStrings>-->
   
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
