--- a/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
+++ b/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
@@ -229,14 +229,12 @@
     <Content Include="Views\Address\Delete.cshtml" />
     <Content Include="Views\Address\Details.cshtml" />
     <Content Include="Views\JobOffer\Index.cshtml" />
-    <Content Include="Views\JobOffer\Create.cshtml" />
-    <Content Include="Views\JobOffer\Details.cshtml" />
-    <Content Include="Views\JobOffer\Edit.cshtml" />
     <Content Include="Views\CompanyJobOffer\Index.cshtml" />
     <Content Include="Views\CompanyJobOffer\Create.cshtml" />
     <Content Include="Views\CompanyJobOffer\Details.cshtml" />
     <Content Include="Views\CompanyJobOffer\Edit.cshtml" />
     <Content Include="Views\CompanyJobOffer\Delete.cshtml" />
+    <Content Include="Views\JobOffer\DownloadPDF.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
