--- a/GetHired/GetHired.Utils/GetHired.Utils.csproj
+++ b/GetHired/GetHired.Utils/GetHired.Utils.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IFileReader.cs" />
+    <Compile Include="Contracts\IFileWriter.cs" />
     <Compile Include="JSONReader.cs" />
     <Compile Include="PDFWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
