--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Services\AddressServiceTests\Constructor_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetByIdWithCity_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetById_Should.cs" />
+    <Compile Include="Services\AddressServiceTests\Update_Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
