--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AddressServiceTests\Constructor_Should.cs" />
+    <Compile Include="Services\AddressServiceTests\Delete_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetByIdWithCity_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetById_Should.cs" />
     <Compile Include="Services\AddressServiceTests\Update_Should.cs" />
