--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AddressServiceTests\Add_Should.cs" />
     <Compile Include="Services\AddressServiceTests\Constructor_Should.cs" />
     <Compile Include="Services\AddressServiceTests\Delete_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetByIdWithCity_Should.cs" />
