--- a/GetHired/GetHired.Utils/GetHired.Utils.csproj
+++ b/GetHired/GetHired.Utils/GetHired.Utils.csproj
@@ -67,6 +67,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Resources\import.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\image.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
