--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AddressServiceTests\Add_Should.cs" />
     <Compile Include="Services\AddressServiceTests\Constructor_Should.cs" />
+    <Compile Include="Services\AddressServiceTests\DeleteById_Should.cs" />
     <Compile Include="Services\AddressServiceTests\Delete_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetByIdWithCity_Should.cs" />
     <Compile Include="Services\AddressServiceTests\GetById_Should.cs" />
