Added test for DeleteById and Delete methods of CompanyService

--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Services\CityServiceTests\GetAll_Should.cs" />
     <Compile Include="Services\CompanyServiceTestss\Add_Should.cs" />
     <Compile Include="Services\CompanyServiceTestss\Constructor_Should.cs" />
+    <Compile Include="Services\CompanyServiceTestss\DeleteById_Should.cs" />
+    <Compile Include="Services\CompanyServiceTestss\Delete_Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
