Added all remaining tests for the CompanyService

--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Services\CompanyServiceTestss\Constructor_Should.cs" />
     <Compile Include="Services\CompanyServiceTestss\DeleteById_Should.cs" />
     <Compile Include="Services\CompanyServiceTestss\Delete_Should.cs" />
+    <Compile Include="Services\CompanyServiceTestss\GetAll_Should.cs" />
+    <Compile Include="Services\CompanyServiceTestss\GetById_Should.cs" />
+    <Compile Include="Services\CompanyServiceTestss\Update_Should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
