--- a/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
+++ b/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
@@ -83,6 +83,9 @@
     <Reference Include="PdfSharp.Charting, Version=1.32.3057.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
       <HintPath>..\packages\PDFsharp-MigraDoc-GDI.1.32.4334.0\lib\net20\PdfSharp.Charting.dll</HintPath>
     </Reference>
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.7.3\lib\net461\Rotativa.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -184,7 +187,6 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AddressController.cs" />
-    <Compile Include="Controllers\CompanyAddressController.cs" />
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\CompanyJobOfferController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -192,9 +194,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AddOrUpdateAddressViewModel.cs" />
-    <Compile Include="Models\AddressViewModel.cs" />
-    <Compile Include="Models\CompanyAddressesViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -209,8 +208,13 @@
     </Content>
     <Content Include="Resources\img1.jpeg" />
     <Content Include="Resources\vid.gif" />
+    <Content Include="Rotativa\help-wkhtmltoimage.txt" />
+    <Content Include="Rotativa\help-wkhtmltopdf.txt" />
+    <Content Include="Rotativa\wkhtmltoimage.exe" />
+    <Content Include="Rotativa\wkhtmltopdf.exe" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="App_Browsers\qt.browser" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -254,15 +258,11 @@
     <Content Include="Views\CompanyJobOffer\Edit.cshtml" />
     <Content Include="Views\CompanyJobOffer\Delete.cshtml" />
     <Content Include="Views\JobOffer\DownloadPDF.cshtml" />
-    <Content Include="Views\CompanyAddress\Create.cshtml" />
-    <Content Include="Views\CompanyAddress\Delete.cshtml" />
-    <Content Include="Views\CompanyAddress\Details.cshtml" />
-    <Content Include="Views\CompanyAddress\Edit.cshtml" />
-    <Content Include="Views\CompanyAddress\Index.cshtml" />
-    <Content Include="Views\JobOffer\Create.cshtml" />
+    <Content Include="Views\Shared\NotFound.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
