--- a/GetHired/GetHired.ASPClient/Web.config
+++ b/GetHired/GetHired.ASPClient/Web.config
@@ -70,15 +70,20 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  
+  <system.web>
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+      <error statusCode="404" redirect="~/Shared/NotFound" />
+      <error statusCode="403" redirect="~/Error/BadRequest" />
+    </customErrors>
+  </system.web>
   <connectionStrings>
     <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GetHired;Integrated Security=True;" />
   </connectionStrings>
-  
+
   <!--<connectionStrings>
     <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\sqlserver;Database=GetHired;Integrated Security=True;" />
   </connectionStrings>-->
-  
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
