Added tests for AddressController

--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
@@ -93,6 +94,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AddressControllerTests\CreateAddressByCompanyId_Should.cs" />
+    <Compile Include="Controllers\AddressControllerTests\Delete_Should.cs" />
+    <Compile Include="Controllers\AddressControllerTests\Details_Should.cs" />
+    <Compile Include="Controllers\AddressControllerTests\Edit_Should.cs" />
+    <Compile Include="Controllers\AddressControllerTests\GetAddressesByCompanyId_Should.cs" />
     <Compile Include="Controllers\HomeControllerTests\About_Should.cs" />
     <Compile Include="Controllers\HomeControllerTests\Contact_Should.cs" />
     <Compile Include="Controllers\HomeControllerTests\Index_Should.cs" />
