--- a/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
+++ b/GetHired/GetHired.UnitTests/GetHired.UnitTests.csproj
@@ -99,6 +99,8 @@
     <Compile Include="Controllers\AddressControllerTests\Details_Should.cs" />
     <Compile Include="Controllers\AddressControllerTests\Edit_Should.cs" />
     <Compile Include="Controllers\AddressControllerTests\GetAddressesByCompanyId_Should.cs" />
+    <Compile Include="Controllers\CompanyControllerTests\Details_Should.cs" />
+    <Compile Include="Controllers\CompanyControllerTests\Index_Should.cs" />
     <Compile Include="Controllers\HomeControllerTests\About_Should.cs" />
     <Compile Include="Controllers\HomeControllerTests\Contact_Should.cs" />
     <Compile Include="Controllers\HomeControllerTests\Index_Should.cs" />
