Used NotFound view in controllers, Modified some test due to changes in code, Added css for 404 not found page

--- a/GetHired/GetHired.ASPClient/Web.config
+++ b/GetHired/GetHired.ASPClient/Web.config
@@ -71,9 +71,10 @@
     </compilers>
   </system.codedom>
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error/Index">
+    <customErrors mode="On" defaultRedirect="~/Shared/NotFound">
       <error statusCode="404" redirect="~/Shared/NotFound" />
-      <error statusCode="403" redirect="~/Error/BadRequest" />
+      <error statusCode="403" redirect="~/Error/NotFound" />
+      <error statusCode="400" redirect="~/Error/NotFound" />
     </customErrors>
   </system.web>
   <connectionStrings>
