--- a/GetHired/GetHired.UnitTests/packages.config
+++ b/GetHired/GetHired.UnitTests/packages.config
@@ -11,6 +11,7 @@
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
