--- a/GetHired/GetHired.ASPClient/Web.config
+++ b/GetHired/GetHired.ASPClient/Web.config
@@ -53,7 +53,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.6.2.0" newVersion="4.6.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.2.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -70,20 +74,22 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.web>
+  <!--<system.web>
     <customErrors mode="On" defaultRedirect="~/Shared/NotFound">
       <error statusCode="404" redirect="~/Shared/NotFound" />
       <error statusCode="403" redirect="~/Error/NotFound" />
       <error statusCode="400" redirect="~/Error/NotFound" />
     </customErrors>
-  </system.web>
-  <connectionStrings>
-    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GetHired;Integrated Security=True;" />
-  </connectionStrings>
-
+  </system.web>-->
   <!--<connectionStrings>
-    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Server=.\sqlserver;Database=GetHired;Integrated Security=True;" />
+    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=GetHired;Integrated Security=True;" />
+    <add name ="Identity" providerName="System.Data.SqlClient" connectionString="Data Source =.\SQLEXPRESS;Initial Catalog=IdentityDb;Integrated Security=True;"/>
   </connectionStrings>-->
+
+  <connectionStrings>
+    <add name="GetHired" providerName="System.Data.SqlClient" connectionString="Data Source =.\sqlserver;Initial Catalog=GetHired;Integrated Security=True;" />
+    <add name ="Identity" providerName="System.Data.SqlClient" connectionString="Data Source =.\sqlserver;Initial Catalog=IdentityDb;Integrated Security=True;"/>
+  </connectionStrings>
 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
