--- a/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
+++ b/GetHired/GetHired.ASPClient/GetHired.ASPClient.csproj
@@ -279,6 +279,7 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\JobOffer\Index.cshtml" />
     <Content Include="Views\JobOffer\LoadFromJson.cshtml" />
+    <Content Include="Views\JobOffer\_JobOffersPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
